Fixes #3616 - Merge JDK 20 specific profiles into default profile (#3617)